--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,8 +64,7 @@ fsspec = "2022.*"  # from simpeg[dask]
 geoana = "~0.4.0"  # from simpeg
 h5py = "^3.2.1"  # from geoh5py
 matplotlib = "~3.7.1"  # from simpeg
-mkl = "2023.2.*"  # from simpeg
-tbb = "2021.12.0"
+mkl = "2023.2.0"  # from simpeg
 pandas = "~2.2.1"  # from SimPEG, also used by targeting-workflow, petro-lingo
 pydantic = "~2.5.2"  # from geoapps-utils
 pydiso = "~0.0.3"  # from simpeg
@@ -75,6 +74,7 @@ tqdm = "^4.66.1"  # from simpeg
 
 # force some versions to resolve incompatible resolution between PyPI and Conda
 #------------------------------------------------------------------------------
+tbb = "~2021.12.0"
 tzdata = "2023.4"  # through pandas from SimPEG
 
 ## about pip dependencies
