--- a/pyproject.toml
+++ b/pyproject.toml
@@ -71,7 +71,7 @@ fsspec = "2022.*"  # from simpeg[dask]
 geoana = "~0.5.0"  # from simpeg
 h5py = "^3.2.1"  # from geoh5py
 matplotlib = "~3.8.4"  # from simpeg
-mkl = "2023.2.*"  # from simpeg
+mkl = "2023.2.0"  # from simpeg
 pandas = "~2.2.1"  # from SimPEG, also used by targeting-workflow, petro-lingo
 pydantic = "^2.5.2"  # from geoh5py
 pydiso = "~0.0.5"  # from simpeg
