--- a/pyproject.toml
+++ b/pyproject.toml
@@ -73,7 +73,7 @@ h5py = "^3.2.1"  # from geoh5py
 matplotlib = "~3.8.4"  # from simpeg
 mkl = "2023.2.0"  # from simpeg
 pandas = "~2.2.1"  # from SimPEG, also used by targeting-workflow, petro-lingo
-pydantic = "^2.5.2"  # from geoh5py
+pydantic = "^2.5.2"  # from geoh5py, geoapps-utils
 pydiso = "~0.0.5"  # from simpeg
 pymatsolver = "~0.2.0"  # from simpeg
 scikit-learn = "~1.4.0"  # from SimPEG, also used by geo-unsup-mapper, petro-lingo
