--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,7 +72,7 @@ geoana = "~0.5.0"  # from simpeg
 h5py = "^3.2.1"  # from geoh5py
 intel-openmp = {source="pypi", version="2023.2.0"}
 matplotlib = "~3.8.4"  # from simpeg
-mkl = "2023.2.0"  # from simpeg
+#mkl = "2023.2.0"  # from simpeg
 pandas = "~2.2.1"  # from SimPEG, also used by targeting-workflow, petro-lingo
 pydantic = "^2.5.2"  # from geoh5py
 pydiso = "~0.0.5"  # from simpeg
@@ -112,7 +112,7 @@ platforms = ['win-64', 'linux-64']
 channels = ['conda-forge']
 
 [tool.conda-lock.dependencies]
-libblas = "*=*mkl"  # because simpeg already brings in the MKL
+#libblas = "*=*mkl"  # because simpeg already brings in the MKL
 
 [tool.isort]
 profile = "black"
