--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ include = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "^3.10, <3.11"  # limited to 3.10 because of geoapps-utils (due to PySide2)
 
 dask = {version = "2022.10.*", extras = ["distributed"]}  # also in simpeg[dask]
 discretize = "~0.10.0"  # also in simpeg, octree-creation-app
