--- a/environments/py-3.10-linux-64.conda.lock.yml
+++ b/environments/py-3.10-linux-64.conda.lock.yml
@@ -13,7 +13,7 @@ dependencies:
   - brotli-bin=1.1.0=hd590300_1
   - brotli-python=1.1.0=py310hc6cd4ac_1
   - bzip2=1.0.8=hd590300_5
-  - c-ares=1.28.1=hd590300_0
+  - c-ares=1.32.0=h4ab18f5_0
   - ca-certificates=2024.7.4=hbcca054_0
   - cached-property=1.5.2=hd8ed1ab_1
   - cached_property=1.5.2=pyha770c72_1
@@ -79,7 +79,7 @@ dependencies:
   - libwebp-base=1.4.0=hd590300_0
   - libxcb=1.16=hd590300_0
   - libxcrypt=4.4.36=hd590300_1
-  - libxml2=2.12.7=hc051c1a_1
+  - libxml2=2.12.7=h4c95cb1_2
   - libzlib=1.3.1=h4ab18f5_1
   - llvm-openmp=18.1.8=hf5423f3_0
   - locket=1.0.0=pyhd8ed1ab_0
@@ -144,12 +144,12 @@ dependencies:
   - zstd=1.5.6=ha6fb4c9_0
   - pip:
       - empymod === 2.3.1
-      - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils@7ca41cbb8d13463e28aec287ef556d131676d0f3
+      - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils@6dd821c01243dc4d52df5e62817c5d6f94c57916
       - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@21ce81d279c206ce0a279377168ce50e0a35d3d2
       - llvmlite === 0.43.0
       - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg@b643f1cb9a9fee76b5e4bd7ed4f1b7a65d1646ec
       - numba === 0.60.0
-      - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app@8b0749e6797c393aaa0d79e34ee199708f448175
+      - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app@f9d919b21d384b454082e4eb8bde8f67d5242e01
       - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps@13c05a3d90fcf2bc37f4d752affbda277c61b8b0
       - scooby === 0.10.0
 
