--- a/environments/py-3.10-win-64-dev.conda.lock.yml
+++ b/environments/py-3.10-win-64-dev.conda.lock.yml
@@ -13,7 +13,7 @@ dependencies:
   - argon2-cffi-bindings=21.2.0=py310h8d17308_4
   - arrow=1.3.0=pyhd8ed1ab_0
   - asciitree=0.3.3=py_2
-  - astroid=3.2.2=py310h5588dad_0
+  - astroid=3.2.3=py310h5588dad_0
   - asttokens=2.4.1=pyhd8ed1ab_0
   - async-lru=2.0.4=pyhd8ed1ab_0
   - attrs=23.2.0=pyh71513ae_0
@@ -35,7 +35,7 @@ dependencies:
   - colorama=0.4.6=pyhd8ed1ab_0
   - comm=0.2.2=pyhd8ed1ab_0
   - contourpy=1.2.1=py310h232114e_0
-  - coverage=7.5.4=py310ha8f682b_0
+  - coverage=7.6.0=py310ha8f682b_0
   - cycler=0.12.1=pyhd8ed1ab_0
   - cytoolz=0.12.3=py310h8d17308_0
   - dask-core=2024.6.2=pyhd8ed1ab_0
@@ -98,7 +98,7 @@ dependencies:
   - jupyterlab_pygments=0.3.0=pyhd8ed1ab_1
   - jupyterlab_server=2.27.2=pyhd8ed1ab_0
   - jupyterlab_widgets=1.1.8=pyhd8ed1ab_0
-  - jupytext=1.16.2=pyhd8ed1ab_1
+  - jupytext=1.16.3=pyhd8ed1ab_0
   - kiwisolver=1.4.5=py310h232114e_1
   - krb5=1.21.3=hdf4eb48_0
   - latexcodec=2.0.1=pyh9f0ad1d_0
@@ -125,7 +125,7 @@ dependencies:
   - libtiff=4.6.0=hddb2be6_3
   - libwebp-base=1.4.0=hcfcfb64_0
   - libxcb=1.16=hcd874cb_0
-  - libxml2=2.12.7=h283a6d9_1
+  - libxml2=2.12.7=h0f24e4e_2
   - libzlib=1.3.1=h2466b09_1
   - linkify-it-py=2.0.3=pyhd8ed1ab_0
   - locket=1.0.0=pyhd8ed1ab_0
@@ -248,7 +248,7 @@ dependencies:
   - tk=8.6.13=h5226925_1
   - toml=0.10.2=pyhd8ed1ab_0
   - tomli=2.0.1=pyhd8ed1ab_0
-  - tomlkit=0.12.5=pyha770c72_0
+  - tomlkit=0.13.0=pyha770c72_0
   - toolz=0.12.1=pyhd8ed1ab_0
   - tornado=6.4.1=py310ha8f682b_0
   - tqdm=4.66.4=pyhd8ed1ab_0
@@ -286,12 +286,12 @@ dependencies:
   - zstd=1.5.6=h0ea2cb4_0
   - pip:
       - empymod === 2.3.1
-      - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils@7ca41cbb8d13463e28aec287ef556d131676d0f3
+      - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils@6dd821c01243dc4d52df5e62817c5d6f94c57916
       - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@21ce81d279c206ce0a279377168ce50e0a35d3d2
       - llvmlite === 0.43.0
       - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg@b643f1cb9a9fee76b5e4bd7ed4f1b7a65d1646ec
       - numba === 0.60.0
-      - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app@8b0749e6797c393aaa0d79e34ee199708f448175
+      - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app@f9d919b21d384b454082e4eb8bde8f67d5242e01
       - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps@13c05a3d90fcf2bc37f4d752affbda277c61b8b0
       - scooby === 0.10.0
 
