--- a/environments/py-3.10-win-64.conda.lock.yml
+++ b/environments/py-3.10-win-64.conda.lock.yml
@@ -64,7 +64,7 @@ dependencies:
   - libtiff=4.6.0=hddb2be6_3
   - libwebp-base=1.4.0=hcfcfb64_0
   - libxcb=1.16=hcd874cb_0
-  - libxml2=2.12.7=h283a6d9_1
+  - libxml2=2.12.7=h0f24e4e_2
   - libzlib=1.3.1=h2466b09_1
   - locket=1.0.0=pyhd8ed1ab_0
   - m2w64-gcc-libgfortran=5.3.0=6
@@ -138,12 +138,12 @@ dependencies:
   - zstd=1.5.6=h0ea2cb4_0
   - pip:
       - empymod === 2.3.1
-      - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils@7ca41cbb8d13463e28aec287ef556d131676d0f3
+      - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils@6dd821c01243dc4d52df5e62817c5d6f94c57916
       - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@21ce81d279c206ce0a279377168ce50e0a35d3d2
       - llvmlite === 0.43.0
       - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg@b643f1cb9a9fee76b5e4bd7ed4f1b7a65d1646ec
       - numba === 0.60.0
-      - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app@8b0749e6797c393aaa0d79e34ee199708f448175
+      - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app@f9d919b21d384b454082e4eb8bde8f67d5242e01
       - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps@13c05a3d90fcf2bc37f4d752affbda277c61b8b0
       - scooby === 0.10.0
 
