--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,21 +21,17 @@ repos:
     hooks:
     -   id: isort
         additional_dependencies: [tomli] # to read config from pyproject.toml
--   repo: https://github.com/psf/black
-    rev: 24.4.2
+-   repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.5.4
     hooks:
-    -   id: black
--   repo: https://github.com/PyCQA/flake8
-    rev: 7.0.0
-    hooks:
-    -   id: flake8
--   repo: https://github.com/asottile/pyupgrade
-    rev: v3.15.2
-    hooks:
-    -   id: pyupgrade
-        args: [--py310-plus]
-#-   repo: https://github.com/pre-commit/mirrors-mypy  # TODO: fix mypy errors
-#    rev: v1.10.0
+    -   id: ruff
+        args:
+        -   --fix
+        -   --exit-non-zero-on-fix
+#        -   --unsafe-fixes
+    -   id: ruff-format
+# -  repo: https://github.com/pre-commit/mirrors-mypy  # TODO: fix mypy errors
+#    rev: v1.11.0
 #    hooks:
 #    -   id: mypy
 #        additional_dependencies: [
@@ -50,7 +46,7 @@ repos:
     hooks:
     -   id: relint
         args: [-W]  # to fail on warnings
--   repo: http://github.com/MiraGeoscience/pre-commit-hooks
+-   repo: https://github.com/MiraGeoscience/pre-commit-hooks
     rev: v1.0.0
     hooks:
     -   id: check-copyright
